<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:background="@android:color/transparent"  
    android:gravity="center" >  

     <Button
         android:id="@+id/memo_close_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/closewin"
         android:minHeight="32dip"
         android:minWidth="32dp" />
   
 <TextView  
                android:id="@+id/tv_memoheader"  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content" 
                android:layout_below="@+id/memo_close_bt" 
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center" 
                android:layout_marginLeft="@dimen/margin_left"
                android:text="新建备忘录"/> 
 
       <TextView
        android:id="@+id/tv_memocreatedtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_memoheader" 
        android:layout_marginLeft="@dimen/margin_left"
        android:textSize="14sp" />                 
    
<LinearLayout
    android:id="@+id/ll_inputform"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tv_memocreatedtime"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:scrollbars="vertical" >
   
         <EditText
        android:id="@+id/et_memoname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:hint="@string/memotitle"
        android:drawableLeft="@drawable/title"
        android:drawablePadding="5dp"
       
        android:textSize="14sp" />
     
           
         <EditText
        android:id="@+id/et_memodescription"
        android:layout_width="match_parent"
        android:layout_height="96dp"
     
        android:editable="true"
        android:saveEnabled="true"
        android:drawableLeft="@drawable/checklist"
        android:drawablePadding="5dp"
        android:hint="@string/memocontent"
        android:textSize="14sp" />
         <EditText
        android:id="@+id/et_memodeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/reminder"
        android:drawablePadding="5dp"
        android:background="@null"
        android:hint="@string/memoalarm"
        android:textSize="14sp" />
    <LinearLayout
   
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_top" 
    android:orientation="horizontal"
    android:scrollbars="vertical" >
          <Button
        android:id="@+id/btn_memoaddpic"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
      
        android:drawableLeft="@drawable/addpic_24px"
        android:drawablePadding="2dp"
        android:button="@null"
        android:hint="@string/header_memoaddpic"
        android:textSize="14sp" /> 
             <ImageView
        android:id="@+id/iv_memoaddpic"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="0dp"
        android:editable="true"
        android:saveEnabled="true"
        
        android:hint="@string/text_memoaddpic"
        android:textSize="14sp" /> 
      
          </LinearLayout>
      
            <LinearLayout
   
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:scrollbars="vertical" >
         <Button
        android:id="@+id/btn_memoaddfile"
         android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
       
        android:drawableLeft="@drawable/attachfile_24px"
        android:drawablePadding="2dp"
       
        android:hint="@string/header_memoaddfile"
        android:textSize="14sp" /> 
         <TextView
        android:id="@+id/tv_memoaddfile"
         android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="0dp"
        android:editable="true"
        android:saveEnabled="true"
        android:gravity="center"
        android:hint="@string/text_memoaddfile"
        android:textSize="14sp" /> 
        
         </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_inputform"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal" >

    <Button
        android:id="@+id/memo_confirm_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left" 
        android:layout_marginBottom="@dimen/margin_bottom"    
        android:layout_weight="0.3"
        android:text="保存"
        android:background="@color/tan"
        android:textSize="14sp" />
       
     <Button
        android:id="@+id/memo_cancel_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginBottom="@dimen/margin_bottom" 
        android:layout_marginRight="@dimen/margin_right"
        android:layout_weight="0.3"
        android:text="取消"
        android:background="@color/gray"
        android:textSize="14sp" />
     
      
</LinearLayout>
</RelativeLayout> 
