<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingTop="@dimen/list_margintop"
    android:paddingBottom="@dimen/list_marginbottom"
  
    android:orientation="vertical"
    >
      <Button
         android:id="@+id/btn_closewin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:background="@drawable/closewin"
         android:minHeight="32dip"
         android:minWidth="32dp" />
    
     
     <TextView
       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topmargin_dialog"
        android:layout_marginRight="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_left"
        android:gravity="start"
        android:text="备忘录详情"
        android:textSize="18sp" />
    
     <TextView
      android:id="@+id/tv_memocreatedtime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/margin_left"
      android:layout_marginRight="@dimen/margin_right"
      android:textSize="12sp"
       />
     
  <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:orientation="vertical"
     android:scrollbars="vertical" >  
      
        <TextView
        android:id="@+id/tv_memoname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left"  
        android:drawableLeft="@drawable/title"
        android:drawablePadding="5dp"
        android:textSize="14sp"
        
        android:layout_gravity="top|left"
         />
       
        <EditText
        android:id="@+id/et_memocontent"
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom" 
        android:drawableLeft="@drawable/checklist"
        android:drawablePadding="5dp"
        android:hint="[提示]点击编辑可修改"
        android:textSize="12sp"
        />
      
       
      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin_top"
       android:layout_marginBottom="@dimen/margin_bottom" 
       android:orientation="horizontal">    
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/reminder"
        android:drawablePadding="5dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:textSize="14sp" />
  
       <TextView
      android:id="@+id/tv_memodeadline"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/margin_left"
      android:layout_marginRight="@dimen/margin_right"
      android:background="@color/mistyrose"  
      android:hint="点击选择(可选)"
      android:textSize="14sp"
       /> 
      </LinearLayout>  
      
      <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_top"
      android:orientation="horizontal"
      android:scrollbars="vertical" >
        <Button
        android:id="@+id/btn_memoaddpic"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/addpic_24px"
        android:drawablePadding="2dp"
        android:button="@null"
        android:hint="@string/header_memo_alterpic"
        android:textSize="14sp" /> 
         <ImageView
        android:id="@+id/iv_memoaddpic"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:editable="true"
        android:saveEnabled="true"
        android:hint="@string/text_memo_alterpic"
        android:textSize="14sp" /> 
      
        </LinearLayout>
      
            <LinearLayout
   
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:scrollbars="vertical" >
         <Button
        android:id="@+id/btn_memoaddfile"
         android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
       
        android:drawableLeft="@drawable/attachfile_24px"
        android:drawablePadding="2dp"
       
        android:hint="@string/header_memo_alterfile"
        android:textSize="14sp" /> 
         <TextView
        android:id="@+id/tv_memoaddfile"
         android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="0dp"
        android:editable="true"
        android:saveEnabled="true"
        android:gravity="center"
        android:hint="@string/text_memo_alterfile"
        android:textSize="14sp" /> 
        
         </LinearLayout>

  </LinearLayout>
    
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"> 
       <Button
        android:id="@+id/btn_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="编辑"
        android:background="@color/mediumorchid"
        android:textSize="16sp" /> 

       <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="取消"
        android:background="@color/gray"
        android:textSize="16sp" />
      
       <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginRight="@dimen/margin_right"
        android:text="保存"
        android:background="@color/tan"
        android:textSize="16sp" /> 
    
     </LinearLayout>
 
</LinearLayout>